Bug/385 (#386)
* Update position of footer bar

Changed the position such that it is pinned to the bottom of the page

#385

* Update position of footer bar on main page

Footer was showing pinned to the bottom of the content rather than the page

#385

* Update position of elements on main page

Set nav bar to be inline-block, and add padding to content such that the page is the correct size

#385

* Code review changes

Removed horizontal scroll, updated position of elements on main page, changed height of side bar to match with footer bar

#385

* Code review changes

Modified spacing of elements on main page which were overlapping the footer bar

#385

* Modify side panel height

Calculate side panel height upon opening panel, and set height

#385

--- a/Spore/front/src/app/components/footer-bar/footer-bar.component.scss
+++ b/Spore/front/src/app/components/footer-bar/footer-bar.component.scss
@@ -6,7 +6,16 @@
   background: $color-spore-navy-blue;
   color: #FFFFFF;
   padding: 5px 100px 5px 100px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 .footer-text {
   float: left;
+}
+
+@media screen and (max-width: 767px) {
+  #footer {
+    padding: 5px 10px;
+  }
 }
